demonstratio/01-application.yml
apiVersion: v1
kind: Service
metadata:
  name: routing
  labels:
    app: routing
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: routing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routing-v1
spec:
  selector:
    matchLabels:
      app: routing
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: routing
        version: v1
    spec:
      containers:
      - name: routing
        image: gregoryguillou/recursed:0.6.0
        command:
        - ./recursed
        - -istio
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routing-v2
spec:
  selector:
    matchLabels:
      app: routing
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: routing
        version: v2
    spec:
      containers:
      - name: routing
        image: gregoryguillou/recursed:0.6.0
        command:
        - ./recursed
        - -istio
        - -delay=2000
        - -version=v2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routing-v3
spec:
  selector:
    matchLabels:
      app: routing
      version: v3
  replicas: 1
  template:
    metadata:
      labels:
        app: routing
        version: v3
    spec:
      containers:
      - name: routing
        image: gregoryguillou/recursed:0.6.0
        command:
        - ./recursed
        - -istio
        - -version=v3
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
