demonstratio/_setup-application.yml
---
apiVersion: v1
kind: Service
metadata:
  name: routing
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: routing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routing-v1
spec:
  selector:
    matchLabels:
      app: routing
      version: v1
  template:
    metadata:
      labels:
        app: routing
        version: v1
    spec:
      containers:
      - name: routing
        image: gregoryguillou/recursed:0.6.0
        command:
        - ./recursed
        - -istio
        - version=v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routing-v2
spec:
  selector:
    matchLabels:
      app: routing
      version: v2
  template:
    metadata:
      labels:
        app: routing
        version: v2
    spec:
      containers:
      - name: routing
        image: gregoryguillou/recursed:0.6.0
        command:
        - ./recursed
        - -istio
        - -version=v2
        - -delay=2000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routing-v3
spec:
  selector:
    matchLabels:
      app: routing
      version: v3
  template:
    metadata:
      labels:
        app: routing
        version: v3
    spec:
      containers:
      - name: routing
        image: gregoryguillou/recursed:0.6.0
        command:
        - ./recursed
        - -istio
        - -version=v3
