demonstratio/02-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: routing
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 81
      name: http
      protocol: HTTP
    hosts:
    - "*"
