demonstratio/03-route-v1-v3-1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: routing
spec:
  hosts:
  - "*"
  gateways:
  - routing
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: routing
        subset: v1
        port:
          number: 8000
      weight: 90
    - destination:
        host: routing
        subset: v3
        port:
          number: 8000
      weight: 10
