demonstratio/04-dr-default.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: routing
spec:
  host: routing
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
