demonstratio/05-route-v1-fault.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: routing
spec:
  hosts:
  - "*"
  gateways:
  - routing
  http:
  - fault:
      abort:
        percentage:
          value: 25
        httpStatus: 429
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: routing
        subset: v1
