demonstratio/10-route-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: routing
spec:
  hosts:
  - "*"
  gateways:
  - routing
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: routing
    retries:
      attempts: 3
      perTryTimeout: 0.5s
