demonstratio/_setup-route-all.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: routing
spec:
  hosts:
  - "*"
  gateways:
  - routing
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: routing
